@@ -1,3 +1,9 @@
+2015-01-16 Riccardo Mottola <rm@gnu.org>
+
+	* BatteryModel.m
+	* BatteryModel-Linux.m
+	_readLine is Linux specific
+
 2015-01-15 Riccardo Mottola <rm@gnu.org>
 
 	* BatteryModel-OpenBSD.m
